--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,19 @@
+require: rubocop-rails
+
 AllCops:
   DisplayCopNames: true
-  TargetRubyVersion: 2.5
+  TargetRubyVersion: 3.0.2
   Include:
+    - '**/app'
     - '**/Gemfile'
     - '**/Rakefile'
     - '**/Appraisals'
   Exclude:
     - 'spec/dummy/**/*'
     - 'lib/generators/**/*'
+
+Rails:
+  Enabled: true
 
 Metrics/LineLength:
   Max: 150
